--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,3 +75,24 @@ body {
   position: absolute;
   width: 250px;
 }
+
+.bg-light-blue {
+  background-color: #F7FBFF;
+}
+
+.bg-white {
+  background-color: #fff;
+}
+
+.text-justify {
+  text-align: justify !important;
+}
+
+.author-container {
+  background-color: #F5F5F5;
+}
+
+.author-container p {
+  padding: 0;
+  margin: 0;
+}
